effettuati i cambiamenti richiesti dalla verifica

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -110,7 +110,7 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 			%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 			\hline
 			%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
-			\multirow{2}{*}{Pre-RR} &  \\
+			\multirow{2}{*}{Pre-RR} & Geremia Mirco \\
 									&  \\
 			\hline
 			\multirow{2}{*}{RR-RPP} & \\
@@ -219,17 +219,10 @@ I ruoli saranno assegnati a rotazione nell'arco dello sviluppo del progetto, in 
 	\end{center}	
 \end{table}
 
-
+\newpage
 
 \subsezione{Descrizione Componenti}
-Vedere Tabella: (\ref{tab:tabella_componenti}) della pagina ~\pageref{tab:tabella_componenti}\\
-
-\subsezione{Assunzioni Iniziali}
-\begin{itemize}
-\item Il costo totale stimato \`e di 13059 euro. Eventuali costi aggiuntivi non saranno a carico del committente ma saranno coperti dall'azienda.
-\item Sono previste 630 ore di lavoro totali per la realizzazione del progetto.\\ 
-\item L'impegno individuale di ogni componente varia da un minimo di 85 ore ad un massimo di 105 ore.\\
-\end{itemize}
+%(\ref{tab:tabella_componenti}) della pagina ~\pageref{tab:tabella_componenti}\\
 
 \begin{table}[h]
 	\begin{center}
@@ -256,6 +249,13 @@ Vedere Tabella: (\ref{tab:tabella_componenti}) della pagina ~\pageref{tab:tabell
 \end{table}
 
 
+\subsezione{Assunzioni Iniziali}
+\begin{itemize}
+\item Il costo totale stimato \`e di 13059 euro. Eventuali costi aggiuntivi non saranno a carico del committente ma saranno coperti dall'azienda.
+\item Sono previste 630 ore di lavoro totali per la realizzazione del progetto.\\ 
+\item L'impegno individuale di ogni componente varia da un minimo di 85 ore ad un massimo di 105 ore.\\
+\end{itemize}
+
 
 \subsezione{Attribuzione dei Ruoli}
 Date le Assunzioni Iniziali precedentemente descritte, ed essendo il gruppo WebShape costituito da sei membri, si avr\`a una media di circa 105 ore di lavoro per persona. La durata complessiva del progetto sar\`a di circa 630 ore, ogni componente lavorer\`a quindi una media di circa 2 ore giornaliere. Sono previste altre tre revisioni:
@@ -265,14 +265,14 @@ Date le Assunzioni Iniziali precedentemente descritte, ed essendo il gruppo WebS
 				\item Revisione di Accettazione (RA)
 			\end{elenconumerato}
 
-La rotazione dei ruoli avviene come da tabella (\ref{tab:TabellaRotazRuoli}) della pagina ~\pageref{tab:TabellaRotazRuoli}.\\
+La rotazione dei ruoli avviene come da tabella (\ref{tab:TabellaRotazRuoli}) a pagina ~\pageref{tab:TabellaRotazRuoli}.\\
 Dato che ogni componente del gruppo dovr\`a assumere tutti i ruoli, \`e previsto che nelle varie fasi del progetto i membri della societ\`a si assumano pi\`u incarichi. Non \`e permesso che uno stesso membro ricopra ruoli in conflitto di interessi tra loro.\\
 
 \sezione{Pianificazione}
 Per la realizzazione del progetto l'azienda WebShape ha valutato con attenzione i possibili modelli di cicli di vita da utilizzare, tenendo conto di eventuali pregi e difetti. 
 La scelta \`e ricaduta sul modello incrementale, in quanto, vista la tipologia modulare del progetto, si adatta meglio alle esigenze dell'azienda stessa. Con il modello incrementale si ha la possibilit\`a di effettuare dei rilasci di versioni parziali in modo da avvicinarsi incrementalmente al prodotto finale ed effettuare una pianificazione ben definita, che sono dei vantaggi importanti per una nuova azienda. Sono stati invece scartati gli altri modelli: il modello sequenziale, perch\`e troppo orientato ai documenti e per il fatto che il primo prodotto del progetto \` e visionabile solo al termine della Fase di Qualifica; il modello evolutivo, per la necessit\`a di un costante rilascio di versioni; infine il modello a spirale, per l'esigenza di avere continui contatti col cliente.\\
 \subsezione{Ore e costi totali}
-In questa sottosezione verr\` a il preventivo totale, comprendente i costi e le ore stimate, necessarie per la realizzazione del progetto. Il preventivo considera tutte le fasi di progettazione sostenute dall'azienda.
+In questa sottosezione verr\` a illustrato il preventivo totale, comprendente i costi e le ore stimate necessarie per la realizzazione del progetto. Il preventivo considera tutte le fasi di progettazione sostenute dall'azienda.
 
 \begin{table}[h]
 	\begin{center}
@@ -284,7 +284,7 @@ In questa sottosezione verr\` a il preventivo totale, comprendente i costi e le 
 		Amministratore & 93 & 1860\\
 		Analista & 93 & 2325\\
 		Progettista & 134 & 2948\\
-		Programmtore & 90 & 1440 \\
+		Programmatore & 90 & 1440 \\
 		Verificatore & 151 & 2416\\
         \hline
         \textbf{Totale} & \textbf{630} & \textbf{13059}\\
@@ -295,18 +295,18 @@ In questa sottosezione verr\` a il preventivo totale, comprendente i costi e le 
 	\end{center}	
 \end{table}
 
-
+\newpage
 \begin{center}\textbf{Ore/Ruolo}
 \end{center}
 \includegraphics[width=300pt]{OreTotali}
-\newpage
+
 \begin{center}\textbf{Costo/Ruolo}
 \end{center}
 \includegraphics[width=350pt]{CostiTotali}
 
 \subsezione{Pianificazione economico-temporale RR-RPP}
 All'interno di questa fase avverr\`a la prima iterazione prevista dal modello di ciclo di vita.
-Al termine dell'iterazione verr\`a rilasciato un prototipo che soddisfer\`a i seguenti requisiti:\\
+Al termine dell'iterazione verranno soddisfatti i seguenti requisiti:\\
 
 %%\begin{enumerate}
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
@@ -341,7 +341,7 @@ Preventivo relativo alla fase Revisione dei requisiti-Revisione del progetto pre
 		Amministratore & 40 & 800\\
 		Analista & 73 & 1825\\
 		Progettista & 50 & 1100\\
-		Programmtore & 0 & 0 \\
+		Programmatore & 0 & 0 \\
 		Verificatore & 35 & 560\\
         \hline
         \textbf{Totale} & \textbf{223} & \textbf{5035}\\
@@ -352,11 +352,11 @@ Preventivo relativo alla fase Revisione dei requisiti-Revisione del progetto pre
 	\end{center}	
 \end{table}
 
-
+\newpage
 \begin{center}\textbf{Ore/Ruolo}
 \end{center}
 \includegraphics[width=300pt]{RR-RPP_Ore}
-\newpage
+
 \begin{center}\textbf{Costo/Ruolo}
 \end{center}
 \includegraphics[width=350pt]{RR-RPP_Costi}
@@ -403,7 +403,7 @@ Preventivo relativo alla fase Revisione del progetto preliminare-Revisione di qu
 		Amministratore & 35 & 700\\
 		Analista & 20 & 500\\
 		Progettista & 84 & 1848\\
-		Programmtore & 90 & 1440 \\
+		Programmatore & 90 & 1440 \\
 		Verificatore & 101 & 1616\\
         \hline
         \textbf{Totale} & \textbf{362} & \textbf{7064}\\
@@ -414,14 +414,16 @@ Preventivo relativo alla fase Revisione del progetto preliminare-Revisione di qu
 	\end{center}	
 \end{table}
 
-
+\newpage
 \begin{center}\textbf{Ore/Ruolo}
 \end{center}
 \includegraphics[width=300pt]{RPP-RQ_Ore}
-\newpage
+
 \begin{center}\textbf{Costo/Ruolo}
 \end{center}
 \includegraphics[width=350pt]{RPP-RQ_Costi}
+
+\newpage
 
 \subsezione{Pianificazione economico-temporale RQ-RA}
 Preventivo relativo alla fase Revisione di qualifica-Revisione di accettazione.
@@ -447,16 +449,18 @@ Preventivo relativo alla fase Revisione di qualifica-Revisione di accettazione.
 \end{table}
 
 
+
 \begin{center}\textbf{Ore/Ruolo}
 \end{center}
 \includegraphics[width=300pt]{RQ-RA_Ore}
-\newpage
+
 \begin{center}\textbf{Costo/Ruolo}
 \end{center}
 \includegraphics[width=350pt]{RQ-RA_Costi}
 
 \subsezione{Distribuzione dei ruoli}
-La distribuzione dei ruoli all'interno dell'azienda \`e stata realizzata in modo da permettere a tutti i membri di Webshape di ricoprire tutti i ruoli richiesti dal progetto, distribuendoli nel modo pi\`u equo possibile, rispettando i vincoli previsti dalle Assunzioni Iniziali. La distribuzione dei ruoli \`e meglio descritta nella tabella (\ref{tab:TabellaRotazRuoli}) della pagina ~\pageref{tab:TabellaRotazRuoli} ; \`e anche descritto il carico di lavoro/persona in ore nella tabella (\ref{tab:TabellaPrevPersOre}) della pagina ~\pageref{tab:TabellaPrevPersOre}.
+La distribuzione dei ruoli all'interno dell'azienda \`e stata realizzata in modo da permettere a tutti i membri di Webshape di ricoprire tutti i ruoli richiesti dal progetto, distribuendoli nel modo pi\`u equo possibile, rispettando i vincoli previsti dalle Assunzioni Iniziali. La distribuzione dei ruoli \`e meglio descritta nelle tabelle (\ref{tab:TabellaRotazRuoliUno}) e (\ref{tab:TabellaRotazRuoliDue}) a pagina ~\pageref{tab:TabellaRotazRuoliUno} ; \`e anche descritto il carico di lavoro/persona in ore nella tabella (\ref{tab:TabellaPrevPersOre}) a pagina ~\pageref{tab:TabellaPrevPersOre}.\\
+La distribuzione del lavoro \`e visibile anche nei file Pianfica.png e PianificaRisorse.png consegnati assieme a questo documento.
 
 Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impiego orario rispetto ad ogni ruolo nella fase antecedente la RR. La retribuzione di tali ore non \`e a carico del committente, ma WebShape desidera mostrare quanto impegno sia stato investito nel progetto. La maggior parte degli sforzi \`e stata indirizzata nel dotare Webshape di metodi di lavoro adatti allo svolgimento del progetto, e per padroneggiare meglio con tali tecnologie.\\
 
@@ -468,12 +472,12 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 		 \hline
 		Responsabile & 20 \\
 		Amministratore & 28 \\
-		Analista & 65 \\
+		Analista & 32 \\
 		Progettista & 10 \\
-		Programmtore & 0 \\
+		Programmatore & 0 \\
 		Verificatore & 12 \\
         \hline
-        \textbf{Totale} & \textbf{135} \\
+        \textbf{Totale} & \textbf{102} \\
 		\hline
 		\end{tabular}
 	\caption{Ore PRE-RR} 
@@ -514,8 +518,8 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
-	\caption{Preventivo rotazione ruoli per fase di progetto prima parte} %INSERIRE DIDASCALIA - SE NECESSARIA - 
-	%\label{tab:TabellaRotazRuoli}
+	\caption{Preventivo rotazione ruoli per fase di progetto - prima parte} %INSERIRE DIDASCALIA - SE NECESSARIA - 
+	\label{tab:TabellaRotazRuoliUno}
 	\end{center}	
 \end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%SECONDA PARTE TABELLLA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -548,8 +552,8 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
-	\caption{Preventivo rotazione ruoli per fase di progetto seconda parte} %INSERIRE DIDASCALIA - SE NECESSARIA - 
-	\label{tab:TabellaRotazRuoli}
+	\caption{Preventivo rotazione ruoli per fase di progetto - seconda parte} %INSERIRE DIDASCALIA - SE NECESSARIA - 
+	\label{tab:TabellaRotazRuoliDue}
 	\end{center}	
 \end{table}
 
