PQ: s/\Large/\LARGE/

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -59,20 +59,20 @@ Versione: \insertversion
 \end{center}
 
 %\setlength{\parindent}{18pt} %settato indentazione di default 
-\section*{\Large Sommario:} %SEZIONE SOMMARIO
+\section*{\LARGE Sommario:} %SEZIONE SOMMARIO
 \indent \indent
 Il presente documento descrive le strategie per la gestione della qualit\`a adottate dall'azienda WebShape, e comprende un resoconto delle relative attivit\`a effettivamente svolte.
 
-\section*{\Large Stato del documento:}
+\section*{\LARGE Stato del documento:}
 \indent \indent
 	Formale Esterno
 
-\section*{\Large Redazione:}
+\section*{\LARGE Redazione:}
 	\begin{elencopuntato}[\normindent]
 		\item[-] Dissegna Stefano
 	\end{elencopuntato}
 
-\section*{\Large Approvazione:}
+\section*{\LARGE Approvazione:}
 	\begin{elencopuntato}[\normindent]
 		\item Approvatore N. 1
 	\end{elencopuntato}
@@ -89,7 +89,7 @@ Il presente documento descrive le strategie per la gestione della qualit\`a adot
 
 
 
-\section*{\Large Registro delle Modifiche:}
+\section*{\LARGE Registro delle Modifiche:}
 
 
 \begin{center}
