PQ: uniformita' nell'uso di NormeDiProgetto

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -184,7 +184,7 @@ Le attivit\`a di verifica si dovranno svolgere immediatamente in seguito ad una 
 \paragraph{Verifica dei documenti} Il revisore, attraverso un'attenta lettura del documento, deve controllare, in ordine crescente di importanza, che:
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
 \item la grammatica e la sintassi siano corrette
-\item la formattazione del documento sia corretta e segua gli standard contenuti nelle \textit{norme di progetto}
+\item la formattazione del documento sia corretta e segua gli standard contenuti nelle \textit{NormeDiProgetto}
 \item i concetti vengano espressi in modo chiaro e non ambiguo
 \item i concetti espressi siano corretti
 \item il documento sia completo
@@ -193,7 +193,7 @@ Le attivit\`a di verifica si dovranno svolgere immediatamente in seguito ad una 
 \paragraph{Verifica del progetto architetturale}
 Il progetto architetturale dovr\`a essere controllato secondo le seguenti caratteristiche:
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
-\item Aderenza alle norme di progetto.
+\item Aderenza alle \textit{NormeDiProgetto}.
 \item Completezza: per controllare l'aderenza ai requisiti, dovr\`a essere verificata la tracciabilit\`a tra ogni requisito e la parte, o le parti, che lo soddisfano nel progetto.
 \item Sufficienza: ogni elemento del progetto dovr\`a o soddissfare un requisito o essere una dipendenza, diretta o indiretta, di un elemento necessario a soddisfare un requisito, in modo che nessuna parte del progetto risulti superflua.
 \item Estendibilit\`a e manutenabilit\`a: il progetto dovr\`a prevedere la possibilt\`a che il prodotto possa essere facilmente esteso e manutenuto in futuro.
@@ -202,7 +202,7 @@ Il progetto architetturale dovr\`a essere controllato secondo le seguenti caratt
 \paragraph{Verifica del progetto di dettaglio}
 Il progetto di dettaglio dovr\`a soddisfare i seguenti aspetti:
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
-\item Aderenza alle norme di progetto.
+\item Aderenza alle \textit{NormeDiProgetto}.
 \item Completezza: ogni elemento presente nel progetto architetturale dovr\`a essere presente anche nel progetto di dettaglio. Non dovranno inoltre essere presenti delle lacune tra un elemento del progetto e la sua effettiva realizzazione.
 \item Sufficienza: non dovranno essere presenti elementi non strettamente necessari alla realizzazione del progetto architetturale.
 \item Applicabilit\`a: il progetto dovr\`a essere realizzabile dai programmatori usando le tecnologie previste.
@@ -236,7 +236,7 @@ Quando un'anomalia viene riscontrata durante una verifica, il verificatore provv
 Qualora un prodotto si discostasse da quanto descritto nell'analisi dei requisiti, il responsabile della qualit\`a provveder\`a a individuare la causa e il colpevole. Il responsabile della qualit\`a, dopo averne discusso con il colpevole, traccier\`a delle azioni correttive e si assicurer\`a che vengano attuate.
 
 \subsezione{Procedure di controllo di qualit\`a di processo}
-L'amministratore del progetto deve assicurarsi che gli standard descritti nelle \textit{norme di progetto} siano rispettati, e deve segnalare eventuali infrazioni al responsabile, in modo che provveda a risolverle. Il responsabile della qualit\`a controlla che le attivit\`a di verifica vengano svolte e che seguano le procedure descritte in questo documento.
+L'amministratore del progetto deve assicurarsi che gli standard descritti nelle \textit{NormeDiProgetto} siano rispettati, e deve segnalare eventuali infrazioni al responsabile, in modo che provveda a risolverle. Il responsabile della qualit\`a controlla che le attivit\`a di verifica vengano svolte e che seguano le procedure descritte in questo documento.
 
 
 \sezione{Resoconto delle attivit\`a di verifica}
